# fspack

./: Cargo.toml  README.md
src/: layout.rs  main.rs  model.rs
src/model/: layout.rs  manifest.rs
