[package]
name = "fspack"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
structopt = "0.3.17"
filetime = "0.2.12"
walkdir = "2.3.1"
chrono = "0.4.15"
